<resources>
    <string name="app_name">My Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_pin">Pinned</string>
    <string name="menu_events">Events</string>
    <string name="menu_archived_notes">Archived</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_note">note</string>
    <string name="save">Save</string>
    <string name="note_menu_archive">Archive</string>
    <string name="menu_settings">Settings</string>
</resources>
