<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="app.mynote.fragments.note.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_nav_notes_to_nav_note"
            app:destination="@id/nav_note" />
    </fragment>

    <fragment
        android:id="@+id/nav_note"
        android:name="app.mynote.fragments.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_nav_note_to_nav_notes"
            app:destination="@id/nav_notes" />
    </fragment>


    <fragment
        android:id="@+id/nav_events"
        android:name="app.mynote.fragments.event.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_archived_notes"
        android:name="app.mynote.fragments.note.archived.ArchivedNotesFragment"
        android:label="@string/menu_archived_notes"
        tools:layout="@layout/fragment_archived_notes" />

    <fragment
        android:id="@+id/nav_pin"
        android:name="app.mynote.fragments.note.pinned.PinNoteListFragment"
        android:label="@string/menu_pin"
        tools:layout="@layout/fragment_pin" >
        <action
            android:id="@+id/action_nav_pin_to_nav_pin_edit"
            app:destination="@id/nav_pin_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_pin_edit"
        android:name="app.mynote.fragments.note.pinned.PinnedNoteEditFragment"
        android:label="@string/menu_pin"
        tools:layout="@layout/fragment_note" >
        <action
            android:id="@+id/action_nav_pin_edit_nav_pin"
            app:destination="@id/nav_pin" />
    </fragment>
</navigation>